<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_des"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/PlaylistLinearLayoutStyle">

                <ImageView
                    android:layout_width="@dimen/playlist_image_layout_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/headset_des"
                    android:src="@drawable/ic_headset" />

                <TextView
                    android:id="@+id/all_musics_text"
                    style="@style/PlaylistsText"
                    android:text="@string/all_musics" />

            </LinearLayout>

            <LinearLayout style="@style/PlaylistLinearLayoutStyle">

                <ImageView
                    android:layout_width="@dimen/playlist_image_layout_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/favorite_border_big_des"
                    android:src="@drawable/ic_favorite_border_big" />

                <TextView
                    android:id="@+id/favorite_text"
                    style="@style/PlaylistsText"
                    android:text="@string/favorite" />

            </LinearLayout>

            <LinearLayout style="@style/PlaylistLinearLayoutStyle">

                <ImageView
                    android:layout_width="@dimen/playlist_image_layout_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/library_music_des"
                    android:src="@drawable/ic_library_music" />

                <TextView
                    android:id="@+id/my_playlist_text"
                    style="@style/PlaylistsText"
                    android:text="@string/my_playlist" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>