<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.musicplayer.NowplayingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                style="@style/NowPlayingImageViewStyle"
                android:contentDescription="@string/album_image"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/favorite_image_button"
                style="@style/ImageButtonStyle_favorite"
                android:contentDescription="@string/favorite_des" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:textColor="@color/song_length_color"
                    tools:text="0:00" />

                <TextView
                    android:id="@+id/song_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/layout_margin_right"
                    android:textColor="@color/song_length_color"
                    tools:text="3:00" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="0" />
            </LinearLayout>

            <TextView
                android:id="@+id/song_title"
                style="@style/NowPlayingText"
                android:layout_marginTop="@dimen/layout_margin_8"
                android:ellipsize="end"
                android:minLines="1"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white"
                tools:text="song title" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/NowPlayingText"
                android:layout_marginBottom="@dimen/layout_margin_8"
                android:textColor="@android:color/darker_gray"
                tools:text="artist name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_50"
                android:paddingRight="@dimen/padding_50">

                <ImageButton
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/fast_rewind_des"
                    android:src="@drawable/ic_fast_rewind" />

                <ImageButton
                    style="@style/ImageButtonStyle"
                    android:layout_width="@dimen/layout_width_0"
                    android:contentDescription="@string/pause_des"
                    android:src="@drawable/ic_pause" />

                <ImageButton
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/fast_forward_des"
                    android:src="@drawable/ic_fast_forward" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>