<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/favorite_image_button"
        android:layout_width="@dimen/favorite_button_size"
        android:layout_height="@dimen/favorite_button_size"
        android:background="@null"
        android:contentDescription="@string/favorite_des"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_4"
        android:textColor="@color/song_length_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_image_button"
        tools:text="0:00" />

    <TextView
        android:id="@+id/song_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_right"
        android:layout_marginTop="@dimen/layout_margin_4"
        android:textColor="@color/song_length_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_image_button"
        tools:text="3:00" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_length" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_right"
        android:layout_marginStart="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:ellipsize="end"
        android:minLines="1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar"
        tools:text="song title" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_8"
        android:layout_marginEnd="@dimen/layout_margin_right"
        android:layout_marginStart="@dimen/layout_margin_left"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_title"
        tools:text="artist name" />

    <ImageButton
        android:id="@+id/fast_rewind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_l"
        android:background="@null"
        android:contentDescription="@string/fast_rewind_des"
        android:src="@drawable/ic_fast_rewind"
        app:layout_constraintBottom_toBottomOf="@+id/pause"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pause" />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_32"
        android:background="@null"
        android:contentDescription="@string/pause_des"
        android:src="@drawable/ic_pause"
        app:layout_constraintEnd_toStartOf="@+id/fast_forward"
        app:layout_constraintStart_toEndOf="@+id/fast_rewind"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <ImageButton
        android:id="@+id/fast_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin_l"
        android:background="@null"
        android:contentDescription="@string/fast_forward_des"
        android:src="@drawable/ic_fast_forward"
        app:layout_constraintBottom_toBottomOf="@+id/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toTopOf="@+id/pause" />
</android.support.constraint.ConstraintLayout>